--- a/documents/0_テーマ.md
+++ b/documents/0_テーマ.md
@@ -3,6 +3,6 @@
 「QRコードで打刻する出退勤管理」は  
 「出退勤管理システム」です。  
 
-これは「スマホで手軽に打刻し、集計を自動化」でき、  
+これは「スマホで手軽に打刻し集計を自動化」でき、  
 「既存の管理アプリ」とは違って、  
 「導入・運用コストがかからず、カスタマイズ自在」な点が特徴です。  
